# Project41

./: README.md
Project41/: README.md  bot_database.db  create_sample_images.py  launcher.py  pyproject.toml  replit.txt  users.json  ИНСТРУКЦИЯ_ПО_ЗАПУСКУ.txt  ПОЯСНИТЕЛЬНАЯ_ЗАПИСКА.txt
Project41/src/: __init__.py  config.py  enhanced_bot.py  enhanced_desktop_app.py  simple_database.py  simple_handlers.py  simple_utils.py
RuUchebnik TEST/: Database_1757866312582.txt  PLAN'.txt  ProjectTG (1)_1757866312583.docx  ProjectTG_1757866312583.txt  Replit.txt  admin_app.py  bot_runner.py  config.py  config2.py  database.py  database1.py  fga.txt  handlers.py  keyboards.py  main.py  ru_uchebnik_1757866315658.py  telegram_bot.py  utils.py  ААА.txt  АААААА.txt  ВГВж.txt
RuUchebnik TEST/logs/: login_logs.json
RuUchebnik TEST/textbooks/: textbooks.json
RuUchebnik TEST/weblinks/: weblinks.json
